--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,6 +1,13 @@
-#Updated at Tue Mar 19 13:06:05 GMT 2013
-#Tue Mar 19 13:06:05 GMT 2013
+#Updated at Tue Mar 19 13:57:13 GMT 2013
+#Tue Mar 19 13:57:13 GMT 2013
 application_name=Had_one_dismissal
+label_com_jclarity_had_one_dismissal_domain_applicant=Applicant
+label_com_jclarity_had_one_dismissal_domain_applicant_firstname=First Name
+label_com_jclarity_had_one_dismissal_domain_applicant_id=Id
+label_com_jclarity_had_one_dismissal_domain_applicant_plural=Applicants
+label_com_jclarity_had_one_dismissal_domain_applicant_surname=Sur Name
+label_com_jclarity_had_one_dismissal_domain_applicant_version=Version
+label_com_jclarity_had_one_dismissal_domain_applicant_yearsexperience=Years Experience
 label_com_jclarity_had_one_dismissal_domain_company=Company
 label_com_jclarity_had_one_dismissal_domain_company_id=Id
 label_com_jclarity_had_one_dismissal_domain_company_location=Location
@@ -38,11 +45,14 @@ label_com_jclarity_had_one_dismissal_domain_tag_id=Id
 label_com_jclarity_had_one_dismissal_domain_tag_name=Name
 label_com_jclarity_had_one_dismissal_domain_tag_plural=Tags
 label_com_jclarity_had_one_dismissal_domain_tag_version=Version
+menu_category_applicant_label=Applicant
 menu_category_company_label=Company
 menu_category_joblisting_label=Job Listing
 menu_category_location_label=Location
 menu_category_seeker_label=Seeker
 menu_category_tag_label=Tag
+menu_item_applicant_list_label=Applicants
+menu_item_applicant_new_label=Applicant
 menu_item_company_list_label=Companys
 menu_item_company_new_label=Company
 menu_item_joblisting_list_label=Job Listings
