--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Tue Mar 19 13:57:13 GMT 2013
-#Tue Mar 19 13:57:13 GMT 2013
+#Updated at Tue Mar 19 15:45:27 GMT 2013
+#Tue Mar 19 15:45:27 GMT 2013
 application_name=Had_one_dismissal
 label_com_jclarity_had_one_dismissal_domain_applicant=Applicant
 label_com_jclarity_had_one_dismissal_domain_applicant_firstname=First Name
@@ -45,8 +45,10 @@ label_com_jclarity_had_one_dismissal_domain_tag_id=Id
 label_com_jclarity_had_one_dismissal_domain_tag_name=Name
 label_com_jclarity_had_one_dismissal_domain_tag_plural=Tags
 label_com_jclarity_had_one_dismissal_domain_tag_version=Version
+label_populate_index=Populate View
 menu_category_applicant_label=Applicant
 menu_category_company_label=Company
+menu_category_controller_label=Controller
 menu_category_joblisting_label=Job Listing
 menu_category_location_label=Location
 menu_category_seeker_label=Seeker
@@ -55,6 +57,7 @@ menu_item_applicant_list_label=Applicants
 menu_item_applicant_new_label=Applicant
 menu_item_company_list_label=Companys
 menu_item_company_new_label=Company
+menu_item_controller__populateindex_id_label=Populate View
 menu_item_joblisting_list_label=Job Listings
 menu_item_joblisting_new_label=Job Listing
 menu_item_location_list_label=Locations
