--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,9 +1,10 @@
-#Updated at Wed Mar 20 11:06:29 GMT 2013
-#Wed Mar 20 11:06:29 GMT 2013
+#Updated at Wed Mar 20 11:07:59 GMT 2013
+#Wed Mar 20 11:07:59 GMT 2013
 application_name=Had_one_dismissal
 label_com_jclarity_had_one_dismissal_domain_applicant=Applicant
 label_com_jclarity_had_one_dismissal_domain_applicant_firstname=First Name
 label_com_jclarity_had_one_dismissal_domain_applicant_foreame=Foreame
+label_com_jclarity_had_one_dismissal_domain_applicant_forename=Forename
 label_com_jclarity_had_one_dismissal_domain_applicant_id=Id
 label_com_jclarity_had_one_dismissal_domain_applicant_plural=Applicants
 label_com_jclarity_had_one_dismissal_domain_applicant_surname=Sur Name
