adds another controller that adds a deadlock and a lock contention problem, fixes #8 fixes #3

--- a/had_one_dismissal/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/had_one_dismissal/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Sun Mar 24 15:09:49 GMT 2013
-#Sun Mar 24 15:09:49 GMT 2013
+#Updated at Tue Apr 02 13:42:27 BST 2013
+#Tue Apr 02 13:42:27 BST 2013
 application_name=Had_one_dismissal
 label_com_jclarity_had_one_dismissal_domain_applicant=Applicant
 label_com_jclarity_had_one_dismissal_domain_applicant_firstname=First Name
@@ -48,6 +48,7 @@ label_com_jclarity_had_one_dismissal_domain_tag_id=Id
 label_com_jclarity_had_one_dismissal_domain_tag_name=Name
 label_com_jclarity_had_one_dismissal_domain_tag_plural=Tags
 label_com_jclarity_had_one_dismissal_domain_tag_version=Version
+label_companyandjob_index=Company And Job Controller View
 label_populate_index=Populate View
 label_search_index=Search View
 menu_category_applicant_label=Applicant
@@ -61,6 +62,7 @@ menu_item_applicant_list_label=Applicants
 menu_item_applicant_new_label=Applicant
 menu_item_company_list_label=Companys
 menu_item_company_new_label=Company
+menu_item_controller__companyandjobindex_id_label=Company And Job Controller View
 menu_item_controller__populateindex_id_label=Populate View
 menu_item_controller__searchindex_id_label=Search View
 menu_item_joblisting_list_label=Job Listings
